--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -1,9 +1,8 @@
-name: Deploy static site to GitHub Pages
+name: Build and Deploy Jekyll Site to GitHub Pages
 
 on:
   push:
-    branches:
-      - main  # Replace with your default branch if not 'main'
+    branches: ["main"]  # or your default branch
 
 permissions:
   contents: read
@@ -12,21 +11,35 @@ permissions:
 
 jobs:
   deploy:
+    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deploy.outputs.page_url }}
-    runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout source
+      - name: Checkout source code
         uses: actions/checkout@v4
 
-      - name: Setup Pages
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.1'
+
+      - name: Install dependencies
+        run: |
+          gem install bundler
+          bundle install
+
+      - name: Build site with Jekyll
+        run: bundle exec jekyll build -d ./_site
+
+      - name: Setup GitHub Pages
         uses: actions/configure-pages@v5
 
-      - name: Upload site
+      - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: docs  # This is your built static site directory
+          path: ./_site
 
       - name: Deploy to GitHub Pages
         id: deploy
